# Blog_VTT

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  Cargo.toml  README.md  database.db  exemple.sh  next.sh
assets/: index.html
assets/static/: main.css
assets/templates/: 404.html  base.html  create_post.html  hello.html  index.html  login.html  post.html  register.html
assets/templates/fragments/: block_post.html
migrations/2023-01-29-214858_create_users/: up.sql
migrations/2023-01-30-140418_create_posts/: up.sql
src/: config.rs  data.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs  schema.rs  utils.rs
src/routes/: auth.rs  mod.rs  post.rs
