[package]
name = "blog_from_scratch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix-files = "0.6.2"
actix-identity = "0.5.2"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
diesel = { version = "2.0.3", features = ["sqlite", "r2d2"] }
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1.2.2", features = ["v4"] }
pwhash = "1.0.0"
tera = "1.17.1"
